deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ornek-uygulama
  labels:
    app: ornek-uygulama
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ornek-uygulama
  template:
    metadata:
      labels:
        app: ornek-uygulama
    spec:
      containers:
      - name: ornek-uygulama
        image: ornek-uygulama:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
