service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ornek-uygulama
spec:
  type: NodePort
  selector:
    app: ornek-uygulama
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
