ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ornek-uygulama-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ornek-uygulama.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ornek-uygulama
            port:
              number: 3000  # Burada port numarasının 3000 olduğundan emin olun
